# generator-python

./: .gitignore  Makefile  README.md  package-lock.json  package.json  plopfile.js
.github/workflows/: ci-workflow.yaml  codeql-analysis.yml  release-major-workflow.yaml  upgrade-deps-workflow.yaml
templates/python-cli/: AGENTS.md  LICENSE  Makefile  README.md  piemaker.yml  pyproject.toml
templates/python-cli-partials/: badges.txt  build_reports.txt  developers_guide.txt
templates/python-cli/.github/: copilot-instructions.md
templates/python-cli/.github/instructions/: python-code.instructions.md
templates/python-cli/.github/workflows/: ci-workflow.yaml  codeql-analysis.yml  publish-workflow.yaml  release-major-workflow.yaml  release-minor-workflow.yaml  release-patch-workflow.yaml  upgrade-deps-workflow.yaml
templates/python-cli/examples/: {{ project_id }}-cli.sh  {{project_id}}-cli.sh  {{project_id}}.yaml
templates/python-cli/tests/: test_config.py  test_logger.py  test_{{ project_id }}.py
templates/python-cli/tests-integration/: test_constructor.py
templates/python-cli/tests/models/: test_message.py
templates/python-cli/{{ project_id }}/: __init__.py
templates/python-cli/{{ project_id }}/models/: __init__.py  message.py
templates/python-cli/{{project_id}}/: __init__.py  config.py
templates/python-lib/: AGENTS.md  Makefile  README.md  piemaker.yml  pyproject.toml
templates/python-lib-partials/: avatar.txt  build_reports.txt
templates/python-lib/.github/workflows/: ci-workflow.yaml  publish-workflow.yaml  release-major-workflow.yaml  release-minor-workflow.yaml  release-patch-workflow.yaml  upgrade-deps-workflow.yaml
templates/python-lib/examples/: {{ project_id }}.py  {{project_id}}-lib.sh  {{project_id}}.py
templates/python-lib/tests/: test_config.py  test_logger.py  test_{{ project_id }}.py
templates/python-lib/tests-integration/: test_constructor.py
templates/python-lib/tests/models/: test_message.py
templates/python-lib/{{ project_id }}/: __init__.py  logger.py
templates/python-lib/{{ project_id }}/models/: __init__.py
templates/python-lib/{{project_id}}/: logger.py
