[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "{{project_id}}"
version = "0.9.0-pre.0"
description = "{{project_desc}}"
license = "Apache-2.0"
authors = [ "{{author_name}} <{{author_email}}>" ]
readme = "README.md"
homepage = "https://github.com/{{github_id}}/{{github_repo}}"
repository = "https://github.com/{{github_id}}/{{github_repo}}"
documentation = "https://github.com/{{github_id}}/{{github_repo}}"
keywords = [ "{{project_id}}", "..." ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "{{project_id}}"

[tool.poetry.scripts]
{{project_id}} = "{{project_id}}:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.3"
conflog = "1.5.1"
PyYAML = "6.0.1"

[tool.poetry.group.dev.dependencies]
twine = "4.0.0"
wheel = "0.40.0"

[tool.poetry.group.test.dependencies]
coverage = "7.2.3"
numpy = "1.26.4" # https://stackoverflow.com/questions/78634235/numpy-dtype-size-changed-may-indicate-binary-incompatibility-expected-96-from
pylint = "3.2.6"
pytest = "7.3.1"
wily = "1.24.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "2.4.0"
pytest-html = "3.2.0"
Sphinx = "6.2.1"
