[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "{{project_id}}"
version = "0.9.0-pre.0"
description = "{{project_desc}}"
license = "Apache-2.0"
authors = [ "{{author_name}} <{{author_email}}>" ]
readme = "README.md"
homepage = "https://github.com/{{github_id}}/{{github_repo}}"
repository = "https://github.com/{{github_id}}/{{github_repo}}"
documentation = "https://github.com/{{github_id}}/{{github_repo}}"
keywords = [ "{{project_id}}", "..." ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "{{project_id}}"

[tool.poetry.dependencies]
python = "^3.10"
conflog = "~2.0.1"
PyYAML = "~6.0.2"

[tool.poetry.group.dev.dependencies]
black = "~25.1.0"
twine = "~6.1.0"
wheel = "~0.45.1"

[tool.poetry.group.test.dependencies]
coverage = "~7.8.2"
numpy = "1.26.4" # https://stackoverflow.com/questions/78634235/numpy-dtype-size-changed-may-indicate-binary-incompatibility-expected-96-from
pylint = "~3.3.7"
pytest = "~8.3.5"
wily = "~1.25.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "~2.4.2"
pytest-html = "~4.1.1"
Sphinx = "8.1.3" # Pinned for Python 3.10 support
